log.txt

PLAY [Provision Test Infrastructure (Localhost)] *******************************

TASK [Check for existing snapshot] *********************************************
ok: [localhost]

TASK [Set Setup Strategy] ******************************************************
ok: [localhost]

TASK [Remove VM] ***************************************************************
changed: [localhost]

TASK [Remove Remote] ***********************************************************
changed: [localhost]

TASK [Restore base-setup snapshot] *********************************************
skipping: [localhost]

TASK [Ensure VM is started (Restored)] *****************************************
skipping: [localhost]

TASK [Bypass Incus nested state corruption on restore] *************************
skipping: [localhost]

TASK [Create Test VM (Debian 13)] **********************************************
changed: [localhost]

TASK [Restart VM to apply config (Secure Boot)] ********************************
changed: [localhost]

TASK [Wait for VM Agent] *******************************************************
FAILED - RETRYING: [localhost]: Wait for VM Agent (60 retries left).
FAILED - RETRYING: [localhost]: Wait for VM Agent (59 retries left).
FAILED - RETRYING: [localhost]: Wait for VM Agent (58 retries left).
FAILED - RETRYING: [localhost]: Wait for VM Agent (57 retries left).
FAILED - RETRYING: [localhost]: Wait for VM Agent (56 retries left).
ok: [localhost]

TASK [Get VM IP] ***************************************************************
ok: [localhost]

TASK [Add host to inventory] ***************************************************
changed: [localhost]

PLAY [Configure Test Infrastructure (VM Inside)] *******************************

TASK [Install Python (raw)] ****************************************************
ok: [test-infra-vm]

TASK [Gather Facts] ************************************************************
ok: [test-infra-vm]

TASK [Install Kernel and ZFS dependencies] *************************************
[ERROR]: Task failed: Action failed: Module result deserialization failed: No start of json char found

Task failed: Action failed.
Origin: /home/usuarios/projetos/crystian/incus-plugin-ansible/tests/infra/setup.yml:155:11

153
154         # Kernel & ZFS - Update to latest to ensure headers match
155         - name: Install Kernel and ZFS dependencies
              ^ column 11

<<< caused by >>>

Module result deserialization failed: No start of json char found See stdout/stderr for the returned output.

fatal: [test-infra-vm]: FAILED! => {"changed": false, "module_stderr": "Error in sitecustomize; set PYTHONVERBOSE for traceback:\nSyntaxError: unexpected character after line continuation character (sitecustomize.py, line 1)\nTraceback (most recent call last):\n  File \"<string>\", line 1, in <module>\n    import apt, ansible.module_utils.basic\nModuleNotFoundError: No module named 'apt'\nError in sitecustomize; set PYTHONVERBOSE for traceback:\nSyntaxError: unexpected character after line continuation character (sitecustomize.py, line 1)\nErro: read vsock vm(4294967295):963120177->vm(3006355025):8443: connection reset by peer\n", "module_stdout": "", "msg": "Module result deserialization failed: No start of json char found", "rc": 255}

PLAY RECAP *********************************************************************
localhost                  : ok=9    changed=5    unreachable=0    failed=0    skipped=3    rescued=0    ignored=0   
test-infra-vm              : ok=2    changed=0    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   

